Fix: Scrollbar style applied for "html" (skin.css)

--- a/web/skins/classic/css/base/skin.css
+++ b/web/skins/classic/css/base/skin.css
@@ -1076,16 +1076,16 @@ div::-webkit-scrollbar, nav::-webkit-scrollbar, .chosen-results::-webkit-scrollb
   height: 11px;
 }
 
-div, nav, .chosen-results {
+html, div, nav, .chosen-results {
   scrollbar-width: thin;
   scrollbar-color: var(--sliderBG) var(--scrollbarBG);
 }
 
-div::-webkit-scrollbar-track, nav::-webkit-scrollbar-track, .chosen-results::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track, div::-webkit-scrollbar-track, nav::-webkit-scrollbar-track, .chosen-results::-webkit-scrollbar-track {
   background: var(--scrollbarBG);
 }
 
-div::-webkit-scrollbar-thumb, nav::-webkit-scrollbar-thumb, .chosen-results::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb, nav::-webkit-scrollbar-thumb, .chosen-results::-webkit-scrollbar-thumb {
   background-color: var(--sliderBG);
   border-radius: 6px;
   border: 3px solid var(--scrollbarBG);
